# writing_an_os_in_rust

./: Cargo.toml  README.md  x86_64-os.json
.cargo/: config.toml
cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
