[package]
name = "writing_an_os_in_rust"
version = "0.1.0"
authors = ["sugawara kensuke <superradio86@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
